--- a/02-crud-mvc/src/main/resources/application.properties
+++ b/02-crud-mvc/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#
+# JDBC properties
+# Springboot will automatically create beans for DataSource, EntityManager(Hibernate Session factory)
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
